objects/Account_Relationship__c.object
<CustomObject>
    <description>Junction object to allow many-to-many relationships between Account records e.g. a customer and a competitor.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Account in the relationship. Usually a customer.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Relationships</relationshipLabel>
        <relationshipName>Account_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary Account in the relationship. Usually a competitor, reseller or distributor.</description>
        <label>Related Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Type__c</field>
                <operation>equals</operation>
                <valueField>Account.Type</valueField>
            </filterItems>
            <infoMessage>Search for Accounts of the same Type</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Accounts</relationshipLabel>
        <relationshipName>Account_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Relationship</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Account Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>